# kfp-operator

./: .gitignore  .tool-versions  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  Makefile.version  PROJECT  README.md  bibcd.yaml  bibcd.yml  common.mk  docker-targets.mk  docker.mk  go-get.mk  go.mod  go.sum  go.work  go.work.sum  help.mk  kfp.yaml  kfp_v2_fixes.md  main.go  minikube.mk  newline.mk  provider-setup.sh  provider-teardown.sh  report.md  test-rc.yaml  vai.yaml  values.yaml  version.mk
.github/: dependabot.yml  pull_request_template.md
.metals/: metals.mv.db
apis/: common_types.go  conditions.go  legacy_types.go  resource.go  suite_test.go  test_generators.go  utils.go  utils_test.go  zz_generated.deepcopy.go
argo/compiler/: Makefile  README.md  entrypoint.sh  pyproject.toml
argo/compiler/acceptance/: pipeline_conf.yaml  test_compiler.py
argo/compiler/compiler/: compiler.py
argo/kfp-compiler/: Dockerfile  Makefile  README.md  compile.py  entrypoint.sh  pyproject.toml
argo/kfp-compiler/acceptance/: namespaced_pipeline_conf.yaml  pipeline_conf.yaml  provider_conf_v1.yaml  provider_conf_v2.yaml  test_compiler.py
argo/kfp-compiler/integration/: Dockerfile
argo/kfp-compiler/kfp_compiler/: __main__.py  compiler.py
argo/kfp-compiler/resources/: compile.sh  entrypoint.sh
argo/kfp-compiler/tests/: test_compiler.py  test_component_expander.py  test_module_loader.py
argo/kfp-sdk/: Dockerfile  Makefile  provider.sh  pyproject.toml
argo/kfp-sdk/kfp_ext/: cli.py  job.py
argo/kfp-sdk/tests/: test_job.py
argo/mlmd-cli/: Dockerfile  Makefile  pyproject.toml  x_mlmd_cli.py
argo/mlmd-cli/mlmd_cli/: cli.py  mlmd_client.py
argo/mlmd-cli/tests/: test_mlmd_cli.py
argo/providers/: Makefile  README.md  get-proto.mk  go.mod  go.sum  go.work  go.work.sum  kfp.Dockerfile  kfp.mk  pyproject.toml  stub.mk  vai.Dockerfile  vai.mk
argo/providers/base/: eventing.go  k8s_api.go  k8s_api_test.go  provider.go  provider_app.go  run_completion.go  suite_unit_test.go  test_utils.go  utils.go  utils_test.go
argo/providers/base/generic/: generic.pb.go
argo/providers/kfp/: Dockerfile  Makefile  eventing_server.go  eventing_server_unit_test.go  job_service_grpc_mock.go  kfp_api.go  kfp_api_unit_test.go  main.go  metadata_store.go  metadata_store_unit_test.go  mock_kfp_api.go  mock_metadata_store.go  mock_resource_reference.go  p.yaml  provider.go  provider_unit_test.go  run_service_grpc_mock.go  services.go  suite_decoupled_test.go  suite_unit_test.go  test_utils.go
argo/providers/kfp/cmd/: main.go
argo/providers/kfp/internal/: kfp_api.go  provider.go  provider_unit_test.go  services.go
argo/providers/kfp/ml_metadata/: metadata_store.pb.go  metadata_store_service.pb.go  metadata_store_service_grpc.pb.go  metadata_store_service_grpc_mock.go
argo/providers/kfp_ext/: job.py
argo/providers/stub/: Dockerfile  Makefile  compile.sh  provider.go
argo/providers/stub/cmd/: main.go
argo/providers/stub/internal/: provider.go
argo/providers/vai/: Dockerfile  Makefile  config.go  config_unit_test.go  eventing_server.go  main.go  mock_pipeline_client.go  provider.go  provider_unit_test.go  suite_unit_test.go  vai_eventing_server_unit_test.go
argo/providers/vai/cmd/: main.go
argo/providers/vai/internal/: config_unit_test.go  provider.go  provider_unit_test.go
common/: Makefile  go.mod  go.sum  k8sconfig.go  metrics.go  testutil.go
compiler/: Dockerfile  Makefile  README.md  docker_test.sh  entrypoint.sh  pyproject.toml
compiler/acceptance/: Dockerfile  module.py  pipeline.py  pipeline_conf.yaml  test_compiler.py
compiler/cd-scripts/: cdBuild.sh
compiler/compiler/: compiler.py  component_expander.py  module_loader.py
compiler/pipeline_root/_wheels/: tfx_user_code_Trainer-0.0+91410e1e18500d4c76998a812813c45b7f794ea19792c315b16d65defb658a5d-py3-none-any.whl
compiler/tests/: test_compiler.py  test_component_expander.py  test_module_loader.py
compilers/: Makefile  README.md
compilers/kfp-sdk/: .flake8  .tool-versions  Dockerfile  Makefile  README.md  pyproject.toml
compilers/kfp-sdk/acceptance/: pipeline.yaml  provider.yaml  test_compiler.py
compilers/kfp-sdk/compiler/: __main__.py  compiler.py
compilers/kfp-sdk/integration/: pipeline.yaml  provider.json
compilers/kfp-sdk/tests/: test_compiler.py
compilers/tfx/: Dockerfile  Makefile  README.md  TFX-Dockerfile  pyproject.toml
compilers/tfx/acceptance/: pipeline_conf.yaml  provider_conf.yaml  provider_conf_v1.yaml  provider_conf_v2.yaml  test_compiler.py
compilers/tfx/compiler/: compiler.py
compilers/tfx/integration/: Dockerfile  patch_tfx_executor.py  pipeline.yaml  provider.yaml  provider_v1.yaml  provider_v2.yaml
compilers/tfx/integration/penguin-310/: pyproject.toml
compilers/tfx/integration/penguin-310-115/: pyproject.toml
compilers/tfx/integration/penguin-310-116/: pyproject.toml
compilers/tfx/integration/penguin-310-117/: pyproject.toml
compilers/tfx/integration/penguin-39/: pyproject.toml
compilers/tfx/resources/: compile.sh  entrypoint.sh
compilers/tfx/tests/: test_compiler.py  test_component_expander.py  test_module_loader.py
compilers/tfx/tfx_compiler/: compiler.py
controllers/: metrics.go  opt_in_client.go  pipeline_controller.go  pipeline_controller_test.go  pipeline_state_handler.go  pipeline_state_handler_test.go  suite_test.go  utils.go  workflows.go
docs-gen/: Makefile  README.md  config.toml  go.mod  go.sum  go.work  go.work.sum  hugo.toml  package-lock.json  package.json
docs-gen/includes/master/quickstart/: Dockerfile  Makefile  pyproject.toml
docs-gen/includes/master/quickstart-tfx-kfp2/: Makefile  pyproject.toml
docs-gen/includes/master/quickstart-tfx-kfp2/resources/: pipeline.yaml  runconfiguration.yaml
docs-gen/includes/master/quickstart/penguin_pipeline/: pipeline.py  trainer.py
docs-gen/includes/master/quickstart/resources/: apply-model-location.yaml  experiment.yaml  pipeline.yaml  runconfiguration.yaml  values.yaml
provider-service/kfp/tfx-patch/test-pipeline/: Dockerfile  pyproject.toml
(+1733 files in other folders)
