[tool.poetry]
name = "kfp-ext"
version = "0.0.0" # set by poetry-dynamic-versioning
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
kfp = "^1.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{{base}}+{{distance}}.{{commit}}{% if dirty %}.dirty{% endif %}"

[build-system]
requires = ["poetry-core>=1.1.9", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kfp-ext = 'kfp_ext.__main__:main'
