[tool.poetry]
name = "mlmd-cli"
version = "0.0.0" # set by poetry-dynamic-versioning
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
ml-metadata = "^1.3.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{{base}}+{{distance}}.{{commit}}{% if dirty %}.dirty{% endif %}"

[build-system]
requires = ["poetry-core>=1.1.9", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mlmd = 'mlmd_cli.__main__:main'