[project]
name = "compiler"
version = "0.0.0" # set by setuptools-scm
description = ""
authors = []
requires-python = ">=3.9"
dependencies = [
    "click>=8,<9",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
    "kfp>=2,<3",
    "pytest>=8",
    "black>=25",
    "flake8>=7",
]

[project.scripts]
compiler = 'compiler.__main__:main'

[tool.setuptools]
packages = ["compiler"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"
