[tool.poetry]
name = "compiler"
version = "0.0.0" # set by poetry-dynamic-versioning
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = ">=8,<9"
PyYAML = ">=5.4.1"
kfp = "2.0.0"
setuptools = "~=70.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"
tfx = "1.15.1"
shapely = "<2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{{base}}+{{distance}}.{{commit}}{% if dirty %}.dirty{% endif %}"

[build-system]
requires = ["poetry-core>=1.1.9", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compiler = 'compiler.__main__:main'
