[project]
name = "compiler"
version = "0.0.0" # set by setuptools-scm
description = ""
authors = []
requires-python = ">=3.9,<3.11"
dependencies = [
    "click>=7,<8",
    "PyYAML>=5.4.1",
    "kfp==1.8.22",
    "setuptools~=70.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "tfx==1.14",
    "shapely<2",
]

[project.scripts]
compiler = 'compiler.__main__:main'

[tool.setuptools]
packages = ["compiler"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"
