[project]
name = "penguin_pipeline"
version = "0.1.0"
description = ""
authors = []
requires-python = ">3.10.19"
dependencies = [
    "tfx==1.17.3",
    "kfp>=2.6.0,<2.7.0",
    "setuptools<82",
    "tensorflow-io",
    "boto3",
    "grpcio<1.60.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.setuptools]
packages = ["penguin_pipeline"]

[build-system]
requires = ["setuptools>=61,<82", "wheel"]
build-backend = "setuptools.build_meta"
