[project]
name = "penguin_pipeline"
version = "0.1.0"
description = ""
authors = []
requires-python = ">3.10.19,<3.11"
dependencies = [
    "tfx==1.16.0",
    "kfp>=2,<2.6",
    "setuptools<82",
    "tensorflow-io",
    "boto3",
    "grpcio<1.60.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.setuptools]
packages = ["penguin_pipeline"]

[build-system]
requires = ["setuptools>=61,<82", "wheel"]
build-backend = "setuptools.build_meta"
