[project]
name = "penguin-integration"
version = "0.1.0"
description = "Test pipeline for shim patch validation"
authors = []
requires-python = "==3.10.12"
dependencies = [
    "tfx==1.15.1",
    "shapely<2",
    "kfp>=2",
    "setuptools~=82.0",
    "dill==0.3.1.1",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
